--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">FLinspirer</string>
+    <string name="description">Hook Linspirer, Let your administrator get confused.</string>
 </resources>
